View-Box Fix & Bim Folder Deletion (#873)
* Removing BIM Folder

* View-Box Fix

Attempt #1 at fixing the squished map & blender viewbox

--- a/public/arcn5005/terms/f2024/students/dennisavgerinos/styles.css
+++ b/public/arcn5005/terms/f2024/students/dennisavgerinos/styles.css
@@ -667,7 +667,7 @@ h1 {
   /* outline: 1px solid black; */
   border-radius: 1rem;
   width: 100%;
-  height: 100%;
+  height: 720px;
 }
 
 .viewer2 {
@@ -675,7 +675,7 @@ h1 {
   /* outline: 1px solid black; */
   border-radius: 1rem;
   width: 100%;
-  height: 100%;
+  height: 720px;
 }
 
 .dot {
